// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots drawer controlled 1`] = `
<div
  style={
    Object {
      "padding": 48,
    }
  }
>
  <div>
    <button
      data-css-176v989=""
      disabled={false}
      onClick={[Function]}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        Toggle drawer
      </span>
    </button>
    <div
      data-css-knxp45=""
    >
      <div
        data-css-157tm1l=""
        onClick={[Function]}
      >
        <div
          data-css-euzj8=""
        >
          <div
            style={
              Object {
                "padding": "10px 0",
              }
            }
          >
            <p
              data-css-1djw98v=""
            >
              Drawer Base Here
            </p>
          </div>
        </div>
        <div
          data-css-qs2rg7=""
        >
          <button
            aria-label="Collapse"
            data-css-xkympi=""
            onClick={[Function]}
          >
            <div
              data-css-xnveog=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        data-css-v1c8as=""
      >
        <div
          aria-hidden={false}
          data-css-1j3g0qd=""
        >
          <div
            style={
              Object {
                "padding": 20,
              }
            }
          >
            <p
              data-css-1djw98v=""
            >
              Drawer Content Here
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer default 1`] = `
<div
  style={
    Object {
      "padding": 48,
    }
  }
>
  <div
    data-css-knxp45=""
  >
    <div
      data-css-k6dw9o=""
      onClick={[Function]}
    >
      <div
        data-css-euzj8=""
      >
        <div
          style={
            Object {
              "padding": "10px 0",
            }
          }
        >
          <p
            data-css-1djw98v=""
          >
            Drawer Base Here
          </p>
        </div>
      </div>
      <div
        data-css-qs2rg7=""
      >
        <button
          aria-label="Expand"
          data-css-xkympi=""
          onClick={[Function]}
        >
          <div
            data-css-1byjzqg=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      data-css-v1c8as=""
    >
      <div
        aria-hidden={true}
        data-css-1j3g0qd=""
      >
        <div
          style={
            Object {
              "padding": 20,
            }
          }
        >
          <p
            data-css-1djw98v=""
          >
            Drawer Content Here
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer prevent toggle 1`] = `
<div
  style={
    Object {
      "padding": 48,
    }
  }
>
  <div>
    <div
      data-css-knxp45=""
    >
      <div
        data-css-k6dw9o=""
        onClick={[Function]}
      >
        <div
          data-css-euzj8=""
        >
          <div
            style={
              Object {
                "padding": "10px 0",
              }
            }
          >
            <p
              data-css-1djw98v=""
            >
              Drawer Base Here
            </p>
          </div>
        </div>
        <div
          data-css-qs2rg7=""
        >
          <button
            aria-label="Expand"
            data-css-xkympi=""
            onClick={[Function]}
          >
            <div
              data-css-1byjzqg=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        data-css-v1c8as=""
      >
        <div
          aria-hidden={true}
          data-css-1j3g0qd=""
        >
          <div
            style={
              Object {
                "padding": 20,
              }
            }
          >
            <p
              data-css-1djw98v=""
            >
              Drawer Content Here
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer row component with actions 1`] = `
<div
  style={
    Object {
      "padding": 48,
    }
  }
>
  <div
    data-css-knxp45=""
  >
    <div
      data-css-k6dw9o=""
      onClick={[Function]}
    >
      <div
        data-css-euzj8=""
      >
        <div
          data-css-19vzw9x=""
        >
          <div
            data-css-js3ti3=""
          >
            <span
              data-css-15yq56v=""
            >
              <a
                href="https://duckduckgo.com?q=image"
              >
                <img
                  src="https://cataas.com/cat"
                />
              </a>
            </span>
            <div
              data-css-1gtggsm=""
            >
              <span
                data-css-1fxa3fl=""
                onBlur={[Function]}
                onFocus={[Function]}
              >
                <a
                  href="https://duckduckgo.com?q=overlay"
                >
                  Overlay
                </a>
              </span>
            </div>
          </div>
          <div
            data-css-kxulf3=""
          >
            <div
              data-css-2pesz8=""
            >
              <span
                data-css-1bnk4mn=""
              >
                <a
                  href="https://duckduckgo.com?q=title"
                >
                  I'm a Row with Actions
                </a>
              </span>
            </div>
            <div
              data-css-145nbth=""
            >
              <span
                data-css-1kcrbi9=""
              >
                <span
                  data-css-1bnk4mn=""
                >
                  <a
                    href="https://duckduckgo.com?q=cats"
                  >
                    Kitten McCatbuns
                  </a>
                </span>
              </span>
              <span
                aria-hidden={true}
                data-css-kykfz1=""
              >
                ·
              </span>
              <span
                data-css-1kcrbi9=""
              >
                23 hours of cuteness
              </span>
            </div>
          </div>
          <div
            data-css-7b22zo=""
          >
            <button
              data-css-kovzf5=""
              disabled={false}
              onClick={[Function]}
              style={Object {}}
            >
              <div
                data-css-y80vay=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="more icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 14.5a2 2 0 110-4 2 2 0 010 4zm12 0a2 2 0 110-4 2 2 0 010 4zm-6 0a2 2 0 110-4 2 2 0 010 4z"
                    />
                  </svg>
                </div>
              </div>
              <span
                data-css-15b13by=""
              />
            </button>
          </div>
        </div>
      </div>
      <div
        data-css-qs2rg7=""
      >
        <button
          aria-label="Expand"
          data-css-xkympi=""
          onClick={[Function]}
        >
          <div
            data-css-1byjzqg=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      data-css-v1c8as=""
    >
      <div
        aria-hidden={true}
        data-css-1j3g0qd=""
      >
        <div
          style={
            Object {
              "padding": 20,
            }
          }
        >
          <p
            data-css-1djw98v=""
          >
            Drawer Content Here
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer stack of drawers 1`] = `
<div
  style={
    Object {
      "padding": 48,
    }
  }
>
  <div>
    <div
      data-css-knxp45=""
    >
      <div
        data-css-k6dw9o=""
        onClick={[Function]}
      >
        <div
          data-css-euzj8=""
        >
          <div
            style={
              Object {
                "padding": "10px 0",
              }
            }
          >
            <p
              data-css-1djw98v=""
            >
              The Drawer #1
            </p>
          </div>
        </div>
        <div
          data-css-qs2rg7=""
        >
          <button
            aria-label="Expand"
            data-css-xkympi=""
            onClick={[Function]}
          >
            <div
              data-css-1byjzqg=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        data-css-v1c8as=""
      >
        <div
          aria-hidden={true}
          data-css-1j3g0qd=""
        >
          <div
            style={
              Object {
                "padding": 20,
              }
            }
          >
            <p
              data-css-1djw98v=""
            >
              Drawer Content Here
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-knxp45=""
    >
      <div
        data-css-k6dw9o=""
        onClick={[Function]}
      >
        <div
          data-css-euzj8=""
        >
          <div
            style={
              Object {
                "padding": "10px 0",
              }
            }
          >
            <p
              data-css-1djw98v=""
            >
              The Drawer #2
            </p>
          </div>
        </div>
        <div
          data-css-qs2rg7=""
        >
          <button
            aria-label="Expand"
            data-css-xkympi=""
            onClick={[Function]}
          >
            <div
              data-css-1byjzqg=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        data-css-v1c8as=""
      >
        <div
          aria-hidden={true}
          data-css-1j3g0qd=""
        >
          <div
            style={
              Object {
                "padding": 20,
              }
            }
          >
            <p
              data-css-1djw98v=""
            >
              Drawer Content Here
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-knxp45=""
    >
      <div
        data-css-k6dw9o=""
        onClick={[Function]}
      >
        <div
          data-css-euzj8=""
        >
          <div
            style={
              Object {
                "padding": "10px 0",
              }
            }
          >
            <p
              data-css-1djw98v=""
            >
              The Drawer #2
            </p>
          </div>
        </div>
        <div
          data-css-qs2rg7=""
        >
          <button
            aria-label="Expand"
            data-css-xkympi=""
            onClick={[Function]}
          >
            <div
              data-css-1byjzqg=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        data-css-v1c8as=""
      >
        <div
          aria-hidden={true}
          data-css-1j3g0qd=""
        >
          <div
            style={
              Object {
                "padding": 20,
              }
            }
          >
            <p
              data-css-1djw98v=""
            >
              Drawer Content Here
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer stack of non-sibling drawers 1`] = `
<div
  style={
    Object {
      "padding": 48,
    }
  }
>
  <div>
    <div>
      <div
        data-css-knxp45=""
      >
        <div
          data-css-k6dw9o=""
          onClick={[Function]}
        >
          <div
            data-css-euzj8=""
          >
            <div
              style={
                Object {
                  "padding": "10px 0",
                }
              }
            >
              <p
                data-css-1djw98v=""
              >
                The Drawer #1
              </p>
            </div>
          </div>
          <div
            data-css-qs2rg7=""
          >
            <button
              aria-label="Expand"
              data-css-xkympi=""
              onClick={[Function]}
            >
              <div
                data-css-1byjzqg=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          data-css-v1c8as=""
        >
          <div
            aria-hidden={true}
            data-css-1j3g0qd=""
          >
            <div
              style={
                Object {
                  "padding": 20,
                }
              }
            >
              <p
                data-css-1djw98v=""
              >
                Drawer Content Here
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        data-css-knxp45=""
      >
        <div
          data-css-k6dw9o=""
          onClick={[Function]}
        >
          <div
            data-css-euzj8=""
          >
            <div
              style={
                Object {
                  "padding": "10px 0",
                }
              }
            >
              <p
                data-css-1djw98v=""
              >
                The Drawer #2
              </p>
            </div>
          </div>
          <div
            data-css-qs2rg7=""
          >
            <button
              aria-label="Expand"
              data-css-xkympi=""
              onClick={[Function]}
            >
              <div
                data-css-1byjzqg=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          data-css-v1c8as=""
        >
          <div
            aria-hidden={true}
            data-css-1j3g0qd=""
          >
            <div
              style={
                Object {
                  "padding": 20,
                }
              }
            >
              <p
                data-css-1djw98v=""
              >
                Drawer Content Here
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        data-css-knxp45=""
      >
        <div
          data-css-k6dw9o=""
          onClick={[Function]}
        >
          <div
            data-css-euzj8=""
          >
            <div
              style={
                Object {
                  "padding": "10px 0",
                }
              }
            >
              <p
                data-css-1djw98v=""
              >
                The Drawer #2
              </p>
            </div>
          </div>
          <div
            data-css-qs2rg7=""
          >
            <button
              aria-label="Expand"
              data-css-xkympi=""
              onClick={[Function]}
            >
              <div
                data-css-1byjzqg=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          data-css-v1c8as=""
        >
          <div
            aria-hidden={true}
            data-css-1j3g0qd=""
          >
            <div
              style={
                Object {
                  "padding": 20,
                }
              }
            >
              <p
                data-css-1djw98v=""
              >
                Drawer Content Here
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer using custom aria label 1`] = `
<div
  style={
    Object {
      "padding": 48,
    }
  }
>
  <div
    data-css-knxp45=""
  >
    <div
      data-css-k6dw9o=""
      onClick={[Function]}
    >
      <div
        data-css-euzj8=""
      >
        <div
          style={
            Object {
              "padding": "10px 0",
            }
          }
        >
          <p
            data-css-1djw98v=""
          >
            Drawer Base Here
          </p>
        </div>
      </div>
      <div
        data-css-qs2rg7=""
      >
        <button
          aria-label="Expand custom drawer"
          data-css-xkympi=""
          onClick={[Function]}
        >
          <div
            data-css-1byjzqg=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      data-css-v1c8as=""
    >
      <div
        aria-hidden={true}
        data-css-1j3g0qd=""
      >
        <div
          style={
            Object {
              "padding": 20,
            }
          }
        >
          <p
            data-css-1djw98v=""
          >
            Drawer Content Here
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer using onToggle prop 1`] = `
<div
  style={
    Object {
      "padding": 48,
    }
  }
>
  <div>
    <div
      data-css-knxp45=""
    >
      <div
        data-css-k6dw9o=""
        onClick={[Function]}
      >
        <div
          data-css-euzj8=""
        >
          <div
            style={
              Object {
                "padding": "10px 0",
              }
            }
          >
            <p
              data-css-1djw98v=""
            >
              Drawer is 
              closed
            </p>
          </div>
        </div>
        <div
          data-css-qs2rg7=""
        >
          <button
            aria-label="Expand"
            data-css-xkympi=""
            onClick={[Function]}
          >
            <div
              data-css-1byjzqg=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        data-css-v1c8as=""
      >
        <div
          aria-hidden={true}
          data-css-1j3g0qd=""
        >
          <div
            style={
              Object {
                "padding": 20,
              }
            }
          >
            <p
              data-css-1djw98v=""
            >
              Drawer Content Here
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer using startOpen prop 1`] = `
<div
  style={
    Object {
      "padding": 48,
    }
  }
>
  <div
    data-css-knxp45=""
  >
    <div
      data-css-157tm1l=""
      onClick={[Function]}
    >
      <div
        data-css-euzj8=""
      >
        <div
          style={
            Object {
              "padding": "10px 0",
            }
          }
        >
          <p
            data-css-1djw98v=""
          >
            Drawer Base Here
          </p>
        </div>
      </div>
      <div
        data-css-qs2rg7=""
      >
        <button
          aria-label="Collapse"
          data-css-xkympi=""
          onClick={[Function]}
        >
          <div
            data-css-xnveog=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      data-css-v1c8as=""
    >
      <div
        aria-hidden={false}
        data-css-1j3g0qd=""
      >
        <div
          style={
            Object {
              "padding": 20,
            }
          }
        >
          <p
            data-css-1djw98v=""
          >
            Drawer Content Here
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer with row component 1`] = `
<div
  style={
    Object {
      "padding": 48,
    }
  }
>
  <div
    data-css-knxp45=""
  >
    <div
      data-css-k6dw9o=""
      onClick={[Function]}
    >
      <div
        data-css-euzj8=""
      >
        <div
          data-css-19vzw9x=""
        >
          <div
            data-css-js3ti3=""
          >
            <div
              data-css-y8jh93=""
            />
          </div>
          <div
            data-css-kxulf3=""
          >
            <div
              data-css-2pesz8=""
            >
              Look at me! I'm a &lt;Row /&gt;!
            </div>
            <div
              data-css-145nbth=""
            >
              <span
                data-css-1kcrbi9=""
              >
                Kitten McCatbuns
              </span>
              <span
                aria-hidden={true}
                data-css-kykfz1=""
              >
                ·
              </span>
              <span
                data-css-1kcrbi9=""
              >
                23 hours of cuteness
              </span>
            </div>
          </div>
          <div
            data-css-7zyoug=""
          >
            <button
              data-css-kovzf5=""
              disabled={false}
              style={Object {}}
            >
              <div
                data-css-y80vay=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="more icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 14.5a2 2 0 110-4 2 2 0 010 4zm12 0a2 2 0 110-4 2 2 0 010 4zm-6 0a2 2 0 110-4 2 2 0 010 4z"
                    />
                  </svg>
                </div>
              </div>
              <span
                data-css-15b13by=""
              />
            </button>
          </div>
        </div>
      </div>
      <div
        data-css-qs2rg7=""
      >
        <button
          aria-label="Expand"
          data-css-xkympi=""
          onClick={[Function]}
        >
          <div
            data-css-1byjzqg=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      data-css-v1c8as=""
    >
      <div
        aria-hidden={true}
        data-css-1j3g0qd=""
      >
        <div
          style={
            Object {
              "padding": 20,
            }
          }
        >
          <p
            data-css-1djw98v=""
          >
            Drawer Content Here
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
